<resources>
    <string name="app_name">Work Tracker</string>
    <string name="main_screen_top_bar">Work Tracker</string>
    <string name="channel_id">ID</string>
    <string name="worktracker_notification_name">WorkTrackerNotification</string>
    <string name="invalid_day_of_the_week">Invalid day of the week</string>
    <string name="new_shift">New Shift</string>
    <string name="edit_shift">Edit Shift</string>
    <string name="shift_start">Shift Start:</string>
    <string name="select_start_time">Select start time</string>
    <string name="shift_end">Shift End:</string>
    <string name="select_end_time">Select end time</string>
    <string name="break_item">Break:</string>
    <string name="select_break_time">Select break time</string>
    <string name="total_item">Total:</string>
    <string name="save_button">Save</string>
    <string name="break_in_minutes">Break (In Minutes)</string>
    <string name="set_break_time">Set break time</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="delete_button">Delete</string>
    <string name="delete_shift_dialog">Delete Shift?</string>
    <string name="settings">Settings</string>
    <string name="back">Back</string>
    <string name="time_zone_setting">Time Zone</string>
    <string name="time_zone_select_back">Time zone select back</string>
    <string name="search">Search</string>
    <string name="clear_text">clear text</string>
...
